--- a/wp-content/themes/delivering-happiness/assets/sass/global/_home.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_home.scss
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 .home {
     .hero_banner {
+        margin-top: 34px;
         .wrapper {
             padding: 136px 0 0 105px;
             height: 546px;
