--- a/wp-content/themes/delivering-happiness/assets/sass/global/_shop.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_shop.scss
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 
 .shop {
+    margin-top: 34px;
     .hero {
         .content {
             padding: 93px 0px 105px 59px;
