--- a/wp-content/themes/delivering-happiness/assets/sass/global/_work.scss
+++ b/wp-content/themes/delivering-happiness/assets/sass/global/_work.scss
@@ -3,6 +3,7 @@
 // --------------------------------------------------
 
 .work {
+    margin-top: 34px;
     .hero {
         .content {
             padding: 107px 0px 105px 59px;
